--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.3",
     "prettier": "^1.17.0"
   },
   "license": "MIT",
