--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "autosuggest-highlight": "^3.1.1",
     "gatsby": "^2.3.31",
     "gatsby-image": "^2.0.40",
+    "gatsby-plugin-jss": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.29",
+    "gatsby-plugin-material-ui": "^1.2.4",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
@@ -17,6 +19,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-jss": "^8.6.1",
     "slugify": "^1.3.4"
   },
   "devDependencies": {
